Hacky fix to get spacing on post-list

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -135,6 +135,7 @@
 
 .post-list-heading {
   @include relative-font-size(1.75);
+  margin-bottom: $spacing-unit;
 }
 
 .post-list {
